feat: SSE OTT 인증, JWT role 기반 어드민 접근, Swagger/Actuator 보안 강화
- [8] SSE StreamTokenStore: OTT 발급 (60초 단회), JWT를 URL에 노출 방지
- [9] JWT role claim 추가 → Spring Security hasRole(ADMIN), AdminComplaintController requireAdmin() 제거
- [10] Swagger UI/api-docs 기본 비활성화 (SWAGGER_ENABLED 환경변수로 제어)
- [11] Actuator 노출 health만 유지, prometheus/metrics/info 제거

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>